# storage/api-docs/api-docs.json
@@ -1653,6 +1653,192 @@
                 }
             }
         },
+        "/api/movie-new-comentary": {
+            "get": {
+                "tags": [
+                    "MovieNewsComentarys"
+                ],
+                "summary": "Get list of MovieNewsComentary",
+                "description": "Returns list of MovieNewsComentary",
+                "operationId": "indexMovieNewsComentary",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/MovieNewsComentary"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "MovieNewsComentarys"
+                ],
+                "summary": "Insert a new MovieNewsComentary",
+                "description": "Insert a new MovieNewsComentary",
+                "operationId": "storeMovieNewsComentary",
+                "requestBody": {
+                    "description": "MovieNewsComentary to create",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "data": {
+                                        "$ref": "#/components/schemas/MovieNewsComentary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "MovieNewsComentary created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/MovieNewsComentary"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation exception"
+                    }
+                }
+            }
+        },
+        "/api/movie-new-comentary/{movienewscomentary_id}": {
+            "get": {
+                "tags": [
+                    "MovieNewsComentarys"
+                ],
+                "summary": "Show a MovieNewsComentary from his Id",
+                "description": "Show a MovieNewsComentary from his Id",
+                "operationId": "showMovieNewsComentary",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/MovieNewsComentary--id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/MovieNewsComentary"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "MovieNewsComentary not found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "MovieNewsComentarys"
+                ],
+                "summary": "Delete a MovieNewsComentary",
+                "description": "Delete a MovieNewsComentary",
+                "operationId": "destroyMovieNewsComentary",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/MovieNewsComentary--id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/MovieNewsComentary"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "204": {
+                        "description": "No content"
+                    },
+                    "404": {
+                        "description": "MovieNewsComentary not found"
+                    }
+                }
+            },
+            "patch": {
+                "tags": [
+                    "MovieNewsComentarys"
+                ],
+                "summary": "Update an existing MovieNewsComentary",
+                "description": "Update an existing MovieNewsComentary",
+                "operationId": "updateMovieNewsComentary",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/MovieNewsComentary--id"
+                    }
+                ],
+                "requestBody": {
+                    "description": "MovieNewsComentary to update",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "data": {
+                                        "$ref": "#/components/schemas/MovieNewsComentary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/MovieNewsComentary"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "MovieNewsComentary not found"
+                    }
+                }
+            }
+        },
         "/api/serie": {
             "get": {
                 "tags": [
@@ -3511,6 +3697,138 @@
                 },
                 "type": "object"
             },
+            "MovieNewsComentary": {
+                "title": "MovieNewsComentary",
+                "description": "MovieNewsComentary model",
+                "required": [],
+                "properties": {
+                    "id": {
+                        "title": "id",
+                        "description": "id of MovieNewsComentary",
+                        "type": "integer",
+                        "readOnly": "true",
+                        "example": "1"
+                    },
+                    "name": {
+                        "title": "name",
+                        "description": "name of MovieNewsComentary",
+                        "type": "string",
+                        "example": "Macbook Pro"
+                    },
+                    "sku": {
+                        "title": "sku",
+                        "description": "sku of MovieNewsComentary",
+                        "type": "string",
+                        "example": "MCBPRO2022"
+                    },
+                    "price": {
+                        "title": "price",
+                        "description": "price of MovieNewsComentary",
+                        "type": "integer",
+                        "example": "99"
+                    },
+                    "created_at": {
+                        "title": "created_at",
+                        "type": "dateTime",
+                        "readOnly": "true",
+                        "example": "2022-07-04T02:41:42.336Z"
+                    },
+                    "updated_at": {
+                        "title": "updated_at",
+                        "type": "dateTime",
+                        "readOnly": "true",
+                        "example": "2022-07-04T02:41:42.336Z"
+                    }
+                },
+                "type": "object"
+            },
+            "MovieNewsComentarys": {
+                "title": "MovieNewsComentarys list",
+                "properties": {
+                    "data": {
+                        "title": "data",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/MovieNewsComentary"
+                        }
+                    },
+                    "first_page_url": {
+                        "title": "first_page_url",
+                        "type": "string",
+                        "example": "http://localhost:8080/api/merchant-customers?page=1"
+                    },
+                    "last_page_url": {
+                        "title": "last_page_url",
+                        "type": "string",
+                        "example": "http://localhost:8080/api/merchant-customers?page=3"
+                    },
+                    "prev_page_url": {
+                        "title": "prev_page_url",
+                        "type": "string",
+                        "example": "null"
+                    },
+                    "next_page_url": {
+                        "title": "next_page_url",
+                        "type": "string",
+                        "example": "http://localhost:8080/api/merchant-customers?page=2"
+                    },
+                    "current_page": {
+                        "title": "current_page",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "from": {
+                        "title": "from",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "last_page": {
+                        "title": "last_page",
+                        "type": "integer",
+                        "example": "3"
+                    },
+                    "path": {
+                        "title": "path",
+                        "type": "string",
+                        "example": "http://localhost:8080/api/merchant-customers"
+                    },
+                    "per_page": {
+                        "title": "per_page",
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "total": {
+                        "title": "total",
+                        "type": "integer",
+                        "example": "3"
+                    },
+                    "links": {
+                        "title": "links",
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "url": {
+                                    "title": "url",
+                                    "type": "string",
+                                    "example": "http://localhost:8080/api/merchant-customers?page=2"
+                                },
+                                "label": {
+                                    "title": "label",
+                                    "type": "string",
+                                    "example": "1"
+                                },
+                                "active": {
+                                    "title": "active",
+                                    "type": "boolean",
+                                    "example": "true"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
+                },
+                "type": "object"
+            },
             "Serie": {
                 "title": "Serie",
                 "description": "Serie model",
@@ -4214,6 +4532,16 @@
                 "name": "MovieNew_id",
                 "in": "path",
                 "description": "Id of MovieNew",
+                "required": true,
+                "schema": {
+                    "type": "integer",
+                    "example": "1"
+                }
+            },
+            "MovieNewsComentary--id": {
+                "name": "MovieNewsComentary_id",
+                "in": "path",
+                "description": "Id of MovieNewsComentary",
                 "required": true,
                 "schema": {
                     "type": "integer",
